RESOLVED FIXED67813
-[WKView attributedSubstringForProposedRange:actualRange:] doesn't update actualRange when it's out of bounds
https://bugs.webkit.org/show_bug.cgi?id=67813
Summary -[WKView attributedSubstringForProposedRange:actualRange:] doesn't update act...
Alexey Proskuryakov
Reported 2011-09-08 16:00:46 PDT
WebKit currently attempts to send a range as large as the client requested, not trying to make it shorter for performance. But we have to shorten it if the length is out of bounds, and need to update actualRange accordingly.
Attachments
proposed fix (2.17 KB, patch)
2011-09-08 16:02 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2011-09-08 16:02:23 PDT
Created attachment 106807 [details] proposed fix
WebKit Review Bot
Comment 2 2011-11-29 21:15:28 PST
Comment on attachment 106807 [details] proposed fix Rejecting attachment 106807 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: force --reset --delete_unversioned_trees' No such file or directory at /mnt/git/webkit-commit-queue/Tools/Scripts/webkitdirs.pm line 2020. Failed to run "['Tools/Scripts/build-webkit', '--release', '--chromium', '--update-chromium']" exit_code: 2 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 109. Re-trying 'depot_tools/gclient sync --force --reset --delete_unversioned_trees' No such file or directory at /mnt/git/webkit-commit-queue/Tools/Scripts/webkitdirs.pm line 2020. Full output: http://queues.webkit.org/results/10687049
Alexey Proskuryakov
Comment 3 2011-11-29 23:11:41 PST
Comment on attachment 106807 [details] proposed fix Error makes no sense, trying again.
WebKit Review Bot
Comment 4 2011-11-30 00:11:41 PST
Comment on attachment 106807 [details] proposed fix Clearing flags on attachment: 106807 Committed r101454: <http://trac.webkit.org/changeset/101454>
WebKit Review Bot
Comment 5 2011-11-30 00:11:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.