-[WKView attributedSubstringForProposedRange:actualRange:] doesn't update actualRange when it's out of bounds https://bugs.webkit.org/show_bug.cgi?id=67813

Reviewed by Simon Fraser.

* UIProcess/API/mac/WKView.mm:
(-[WKView attributedSubstringForProposedRange:actualRange:]): Update actualRange to match
result length.
(-[WKView firstRectForCharacterRange:actualRange:]): Added a FIXME. This is harder to
implement, and it's unclear if clients care at this time.


Canonical link: https://commits.webkit.org/89935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101454 268f45cc-cd09-0410-ab3c-d52691b4dbfc